--- a/Certificado Profissional Google Data Analytics/Módulo 4 - Processar dados de sujo para limpo.ipynb
+++ b/Certificado Profissional Google Data Analytics/Módulo 4 - Processar dados de sujo para limpo.ipynb
@@ -73,6 +73,119 @@
     "* Se houver um bom alinhamento, mas os dados precisarem ser limpos, limpe os dados antes de executar sua análise. \n",
     "* Se os dados estiverem apenas parcialmente alinhados com um objetivo, pense em como você pode modificar o objetivo ou usar restrições de dados para garantir que o subconjunto de dados se alinhe melhor com o objetivo de negócios."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7eb9ef4e",
+   "metadata": {},
+   "source": [
+    "## O que fazer quando você encontra um problema com seus dados: <br>\n",
+    "#### Problema de dados 1: sem dados \n",
+    "\n",
+    "a) Soluções possíveis: Reúna os dados em pequena escala para realizar uma análise preliminar e, em seguida, solicite mais tempo para concluir a análise depois de coletar mais dados.\n",
+    "Exemplos de soluções na vida real: Se você estiver pesquisando funcionários sobre o que eles pensam sobre um novo plano de desempenho e bônus, use uma amostra para uma análise preliminar. Em seguida, peça mais 3 semanas para coletar os dados de todos os funcionários.\n",
+    "\n",
+    "b) Soluções possíveis: Se não houver tempo para coletar dados, faça a análise usando dados proxy de outros conjuntos de dados. Esta é a solução alternativa mais comum.\n",
+    "Exemplos de soluções na vida real: Se você estiver analisando os horários de pico para passageiros, mas não tiver os dados de uma cidade específica, use os dados de outra cidade com tamanho e demografia semelhantes.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "#### Problema de dados 2: poucos dados\n",
+    "a) Soluções possíveis: Faça a análise usando dados de proxy juntamente com dados reais.\n",
+    "Exemplos de soluções na vida real: Se você estiver analisando tendências para proprietários de golden retrievers, aumente seu conjunto de dados incluindo os dados de proprietários de labradores.  \n",
+    "\n",
+    "b) Soluções possíveis: Ajuste sua análise para alinhar com os dados que você já possui.\n",
+    "Exemplos de soluções na vida real: Se faltarem dados para jovens de 18 a 24 anos, faça a análise, mas observe a seguinte limitação em seu relatório: esta conclusão aplica-se apenas a adultos de 25 anos ou mais . \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "##### Problema de dados 3: dados errados, incluindo dados com erros\n",
+    "a) Soluções possíveis: Se você tiver os dados errados porque os requisitos foram mal compreendidos, comunique os requisitos novamente.\n",
+    "Exemplos de soluções na vida real: Se você precisa dos dados para eleitores do sexo feminino e recebeu os dados dos eleitores do sexo masculino, reafirme suas necessidades.\n",
+    "\n",
+    "b) Soluções possíveis: Identifique erros nos dados e, se possível, corrija-os na fonte procurando um padrão nos erros.\n",
+    "Exemplos de soluções na vida real: Se seus dados estiverem em uma planilha e houver uma instrução condicional ou booleana causando erros nos cálculos, altere a instrução condicional em vez de apenas corrigir os valores calculados.\n",
+    "\n",
+    "c) Soluções possíveis: Se você não puder corrigir os erros de dados sozinho, poderá ignorar os dados errados e prosseguir com a análise se o tamanho da amostra ainda for grande o suficiente e ignorar os dados não causará viés sistemático.\n",
+    "Exemplos de soluções na vida real: Se o seu conjunto de dados foi traduzido de um idioma diferente e algumas das traduções não fazem sentido, ignore os dados com tradução ruim e prossiga com a análise dos outros dados.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "#### Use a seguinte árvore de decisão como um lembrete de como lidar com erros de dados ou dados insuficientes:\n",
+    "Você pode corrigir ou solicitar um conjunto de dados corrigido?\n",
+    "* SIM > realizar a análise após a correção dos dados\n",
+    "* NÃO > Você tem dados suficientes para omitir os dados errados?\n",
+    "    * SIM > Realize a análise sem os dados errados\n",
+    "    * NÃO > Você pode fazer proxy dos dados?\n",
+    "        * SIM > Realizar a análise com os dados proxy\n",
+    "        * NÃO > Você pode coletar mais dados?\n",
+    "            * SIM > Realizar a análise após a coleta de dados\n",
+    "            * NÃO > Modifique o objetivo do negócio (se possível)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96f57c6c",
+   "metadata": {},
+   "source": [
+    "## Calculando o tamanho da amostra: <br>\n",
+    "\n",
+    "O objetivo é obter informações suficientes de um pequeno grupo dentro uma população para fazer previsões ou conclusões sobre toda a população. O tamanho da amostra ajuda garantir o grau em que você pode ser confiante de que suas conclusões representar com precisão a população.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Viés de amostragem é quando uma amostra não representa a população como um todo. Isso significa que alguns membros da população estão sendo super-representados ou sub-representados.\n",
+    "\n",
+    "<br>\n",
+    " \n",
+    "O uso de amostragem aleatória pode ajudar abordar alguns desses problemas com viés de amostragem. A amostragem aleatória é uma forma de selecionando uma amostra de uma população para que todo tipo possível da amostra tem uma chance igual de ser escolhida.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "#### Terminologia: \n",
+    "* População: Todo o grupo em que você está interessado para o seu estudo. Por exemplo, se você estiver pesquisando pessoas em sua empresa, a população seria todos os funcionários de sua empresa.\n",
+    "* Amostra: Um subconjunto de sua população. Assim como uma amostra de comida, ela é chamada de amostra porque é apenas um sabor. Portanto, se sua empresa for muito grande para pesquisar cada indivíduo, você pode pesquisar uma amostra representativa de sua população.\n",
+    "* Margem de erro: Como uma amostra é usada para representar uma população, espera-se que os resultados da amostra sejam diferentes do que seria se você tivesse pesquisado toda a população. Essa diferença é chamada de margem de erro. Quanto menor a margem de erro, mais próximos os resultados da amostra estarão do que seria se você tivesse pesquisado toda a população. \n",
+    "* Nível de confiança: Quão confiante você está nos resultados da pesquisa. Por exemplo, um nível de confiança de 95% significa que, se você executar a mesma pesquisa 100 vezes, obterá resultados semelhantes 95 dessas 100 vezes. O nível de confiança é direcionado antes de você iniciar seu estudo porque afetará o tamanho de sua margem de erro no final de seu estudo. \n",
+    "* Intervalo de confiança: A faixa de valores possíveis que o resultado da população estaria no nível de confiança do estudo. Este intervalo é o resultado da amostra +/- a margem de erro.\n",
+    "* Significado estatístico: A determinação de se o seu resultado pode ser devido ao acaso ou não. Quanto maior a significância, menos devido ao acaso.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "#### Coisas para lembrar ao determinar o tamanho da sua amostra:\n",
+    "* Não use um tamanho de amostra menor que 30. Está estatisticamente comprovado que 30 é o menor tamanho de amostra onde um resultado médio de uma amostra começa a representar o resultado médio de uma população.\n",
+    "    * À medida que o tamanho da amostra aumenta, os resultados se assemelham mais à distribuição normal (em forma de sino) de um grande número de amostras. Uma amostra de 30 é o menor tamanho de amostra para o qual o CLT ainda é válido. \n",
+    "    * https://www.investopedia.com/terms/c/central_limit_theorem.asp\n",
+    "* O nível de confiança mais comumente usado é 95%, mas 90% pode funcionar em alguns casos. \n",
+    "* Para um nível de confiança mais alto , use um tamanho de amostra maior\n",
+    "* Para diminuir a margem de erro, use um tamanho de amostra maior\n",
+    "* Para maior significância estatística, use um tamanho de amostra maior\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "* Os tamanhos das amostras variam de acordo com o problema de negócios\n",
+    "* OS Tamanhos de amostra maiores têm um custo mais alto\n",
+    "* Saber o básico é útil > https://www.statisticssolutions.com/dissertation-resources/sample-size-calculation-and-sample-size-justification/sample-size-formula/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b68a63b3",
+   "metadata": {},
+   "source": [
+    "## Pré-limpeza: <br>\n",
+    "* Revise a integridade dos dados: Entender os dados com os quais está trabalhando e se estão conectados ao objetivo de negocios\n",
+    "* Ter dados suficientes: Dados insuficientes vem de apenas uma fonte, atualiza continuamente e estão incompletos, desatualizados e geograficamente limitados. Para lidar com dados insuficientes, pode identificar tendencias dentro dos dados disponiveis, aguardar mais dados se o tempo permitir, discutir com as partes interessadas e ajuste seus objetivos e pesquisar um novo conjunto de dados. \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "#### Por que é importante concluir as etapas de pré limpeza antes da limpeza de dados?\n",
+    "##### Se você sabe que seus dados são precisos, consistentes e completos, pode ter certeza de que seus resultados serão válidos. As partes interessadas ficarão satisfeitas se você conectar os dados aos objetivos de negócios. E saber quando parar de coletar dados permitirá que você conclua suas tarefas em tempo hábil sem sacrificar a integridade dos dados.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "##### Suponha que você não tenha determinado a integridade dos dados. Você pode descobrir que está trabalhando com dados imprecisos ou ausentes, o que pode causar resultados enganosos em sua análise. Se você não conectar os objetivos com os dados, sua análise pode não ser relevante para as partes interessadas. Finalmente, não entender quando parar de coletar dados pode levar a atrasos desnecessários na conclusão de tarefas. Ao concluir as atividades de pré-limpeza, você evita esses problemas."
+   ]
   }
  ],
  "metadata": {
