--- a/Data Analyst Training - Projetos de Analista de Dados.ipynb
+++ b/Data Analyst Training - Projetos de Analista de Dados.ipynb
@@ -278,6 +278,17 @@
     "    * b) Criação de OKRS fictícios com base nos problemas de negócios criados;\n",
     "3. Coleta de dados: uma vez que o problema tenha sido definido, é importante coletar todos os dados relevantes. Isso pode envolver a extração de dados de bancos de dados internos, aquisição de dados de fontes externas, ou a criação de novos conjuntos de dados por meio de experimentos.\n",
     "    * Escolha dos conjuntos de dados de cada projeto;\n",
+    "        * Gerador de Banco de Dados > https://www.mockaroo.com/\n",
+    "        * Gerador de número > https://www.4devs.com.br/\n",
+    "        * https://basedosdados.org/#theme\n",
+    "        * https://dados.gov.br/dados/conjuntos-dados\n",
+    "        * https://medium.com/programacaodinamica/7-datasets-gratuitos-para-inspirar-seu-portf%C3%B3lio-de-ci%C3%AAncia-de-dados-d6962bea8376\n",
+    "        * https://sidra.ibge.gov.br/pesquisa/pia-empresa/quadros/brasil/2021\n",
+    "        * https://www.kdnuggets.com/datasets/index.html\n",
+    "        * https://learn.microsoft.com/pt-br/power-bi/create-reports/sample-datasets\n",
+    "        * https://www.ibge.gov.br/estatisticas/downloads-estatisticas.html\n",
+    "        * https://www.datarebel.io/u/TheDataLad\n",
+    "        * https://www.dataquest.io/blog/free-datasets-for-projects/\n",
     "4. Criação do projeto junto com o README no Github;\n",
     "    * a) Limpeza e preparação de dados: antes que os dados possam ser analisados, é importante garantir que estejam limpos e preparados para análise. Isso envolve a identificação e correção de valores ausentes ou inconsistentes, a padronização de formatos de dados, e a criação de novas variáveis, se necessário.\n",
     "    * b) Análise exploratória: uma vez que os dados foram limpos e preparados, a próxima etapa é realizar uma análise exploratória dos dados. Isso envolve a criação de visualizações para entender a distribuição dos dados, identificar padrões e tendências, e explorar relações entre diferentes variáveis.\n",
