--- a/Data Analyst Training - Projetos de Analista de Dados.ipynb
+++ b/Data Analyst Training - Projetos de Analista de Dados.ipynb
@@ -26,7 +26,7 @@
     "2. [Tipos de Projetos](#Tipos-de-Projetos)\n",
     "3. [Estrutura do Projeto no GitHub](#Estrutura-do-Projeto-no-GitHub)\n",
     "4. [Erros de um projeto](#Erros-de-um-projeto)\n",
-    "4. [Etapas da elaboração dos projetos](#Etapas-da-elaboração-dos-projetos)"
+    "4. [Etapas da elaboração dos projetos para portifólio](#Etapas-da-elaboração-dos-projetos-para-portifólio)"
    ]
   },
   {
@@ -263,7 +263,7 @@
    "id": "bb2a7f43",
    "metadata": {},
    "source": [
-    "# Etapas da elaboração dos projetos\n",
+    "# Etapas da elaboração dos projetos para portifólio\n",
     "[&#x1F53C;](#Sumário:) Clique para voltar para o sumário"
    ]
   },
