--- a/Roteiro de analistas de dados.ipynb
+++ b/Roteiro de analistas de dados.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "source": [
     "# 100 dias de análise de dados : um guia completo <br>\n",
-    "https://medium.com/@brittanycity/100-days-of-data-analytics-a-complete-guide-d278ac34655b"
+    "> https://medium.com/@brittanycity/100-days-of-data-analytics-a-complete-guide-d278ac34655b"
    ]
   },
   {
@@ -108,7 +108,7 @@
    "metadata": {},
    "source": [
     "# Cursos Udacity GRATUITOS sobre Análise de Dados, SQL e Visualização de Dados: <br>\n",
-    "https://www.mltut.com/free-udacity-courses-on-data-analytics/"
+    "> https://www.mltut.com/free-udacity-courses-on-data-analytics/"
    ]
   },
   {
@@ -116,8 +116,8 @@
    "id": "26692340",
    "metadata": {},
    "source": [
-    "# Introdução à análise de dados: o “método Google” <br>\n",
-    "https://towardsdatascience.com/intro-to-data-analytics-the-google-method-92d431b65581\n"
+    "# Introdução à análise de dados: o “Método Google” <br>\n",
+    "> https://towardsdatascience.com/intro-to-data-analytics-the-google-method-92d431b65581"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "metadata": {},
    "source": [
     "# Guia essencial de um cientista de dados para análise exploratória de dados: <br>\n",
-    "https://towardsdatascience.com/a-data-scientists-essential-guide-to-exploratory-data-analysis-25637eee0cf6"
+    "> https://towardsdatascience.com/a-data-scientists-essential-guide-to-exploratory-data-analysis-25637eee0cf6"
    ]
   },
   {
@@ -135,7 +135,36 @@
    "metadata": {},
    "source": [
     "# Revolucionando a análise de dados com PandasGUI <br>\n",
-    "https://www.kdnuggets.com/2023/06/revolutionizing-data-analysis-pandasgui.html"
+    "> https://www.kdnuggets.com/2023/06/revolutionizing-data-analysis-pandasgui.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b93bb58",
+   "metadata": {},
+   "source": [
+    "# Carreira em Data Analytics da DIO: <br>\n",
+    "> https://digitalinnovationone.github.io/roadmaps/careers/data-analytics/ <br>\n",
+    "\n",
+    "* Excel: https://support.microsoft.com/en-us/excel\n",
+    "* Estatística e Matemática Básica (Livro Estatística: O que é, para que serve, como funciona por Charles Wheelan)\n",
+    "* Formação SQL Database Specialist\n",
+    "* Formação NoSQL Specialist\n",
+    "* Formação Power BI Analyst\n",
+    "* Formação Python Developer\n",
+    "* Curso Introdução a Ciência de Dados (Livro Data Science do Zero por Joel Grus - O'Reilly e Livro Estatística para Cientista de Dados por Andrew Bruce - O'Reilly)\n",
+    "* Formação R Developer (Livro Python e R Para o Cientista de Dados Moderno: o Melhor de Dois Mundos por Boyan Angelov - O'Reilly)\n",
+    "* Cloud Specialist (Livro Um guia prático para migração para nuvem por Kieran Broadfoot - O'Reilly)\n",
+    "    * Google Cloud Platform (GCP)\n",
+    "    * Microsoft Azure\n",
+    "    * Amazon Web Services\n",
+    "* Formação Machine Learning Specialist\n",
+    "    * Livro Análise Prática de Séries Temporais: Predição com Estatística e Aprendizado de Máquina por Aileen Nielsen - O'Reilly\n",
+    "    * Livro Designing Machine Learning Systems: An Iterative Process for Production-Ready Applications por Chip Huyen - O'Reilly\n",
+    "    * Livro Machine Learning Design Patterns: Solutions to Common Challenges in Data Preparation, Model Building, and Mlops por Valliappa Lakshmanan - O'Reilly\n",
+    "* Formação Spark Big Data Specialist\n",
+    "    * Livro Big data para leigos por Alan Nugent\n",
+    "    * Livro Big Data Now: Current Perspectives from O'Reilly Radar por O'Reilly Radar Team"
    ]
   }
  ],
